@@ -1,3 +1,8 @@
+devel:
+- scan:
+  - added param -t to set sockets timeout
+- bug fixes
+
 v4.0 (May/2024):
 - Unify scripts into one: sippts
 - bug fixes
